<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.OperacionesBaseDatosActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_isbn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imagen"
            android:text="https://image.isu.pub/140916154841-15f074f87b0c1f94c6b58f43bc2036e7/jpg/page_1.jpg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_guardar"
        android:background="@color/primaryColor"
        />
    <Button
        android:id="@+id/consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_consultar"
        android:background="@color/primaryColor"
        />

    <Button
        android:id="@+id/eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_eliminar"
        android:background="@color/primaryColor"
        />

    <Button
        android:id="@+id/modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_modificar"
        android:background="@color/primaryColor"
        />

</LinearLayout>