<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vistas.ContenedorActivity">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/libros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item1"
            android:icon="@drawable/baseline_location_on_black_24dp"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/mis_libros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item2"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/mi_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item3"
            />


    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>